<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp" >

            <RelativeLayout
                android:id="@+id/form_colorPicker"
                style="?attr/materialButtonToggleGroupStyle"
                app:singleSelection="true"
                app:selectionRequired="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/P1"
                android:layout_marginStart="@dimen/P2"
                android:layout_marginEnd="@dimen/P2"
                android:layout_marginBottom="@dimen/P1"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

                <Button
                    android:id="@+id/form_colorPicker_beige"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_height="@dimen/addActivity_colorPick_height"
                    android:layout_width="@dimen/addActivity_colorPick_width"
                    android:layout_marginEnd="@dimen/P1"
                    android:layout_alignParentStart="true"
                    android:backgroundTint="@color/Beige_forCircle" />

                <Button
                    android:id="@+id/form_colorPicker_green"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_height="@dimen/addActivity_colorPick_height"
                    android:layout_width="@dimen/addActivity_colorPick_width"
                    android:layout_marginStart="@dimen/P1"
                    android:layout_marginEnd="@dimen/P1"
                    android:layout_toEndOf="@id/form_colorPicker_beige"
                    android:backgroundTint="@color/Green_forCircle" />

                <Button
                    android:id="@+id/form_colorPicker_blue"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_height="@dimen/addActivity_colorPick_height"
                    android:layout_width="@dimen/addActivity_colorPick_width"
                    android:layout_marginStart="@dimen/P1"
                    android:layout_marginEnd="@dimen/P1"
                    android:layout_toEndOf="@id/form_colorPicker_green"
                    android:backgroundTint="@color/Blue_forCircle" />

                <Button
                    android:id="@+id/form_colorPicker_yellow"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_height="@dimen/addActivity_colorPick_height"
                    android:layout_width="@dimen/addActivity_colorPick_width"
                    android:layout_marginStart="@dimen/P1"
                    android:layout_marginEnd="@dimen/P1"
                    android:layout_toEndOf="@id/form_colorPicker_blue"
                    android:backgroundTint="@color/Yellow_forCircle" />

                <Button
                    android:id="@+id/form_colorPicker_grey"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_height="@dimen/addActivity_colorPick_height"
                    android:layout_width="@dimen/addActivity_colorPick_width"
                    android:layout_marginStart="@dimen/P1"
                    android:layout_toEndOf="@id/form_colorPicker_yellow"
                    android:backgroundTint="@color/Grey_forCircle" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/form_colorPicker"
                app:layout_constraintStart_toStartOf="parent" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addActivity_name_input"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_hour"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/form_name"
                app:layout_constraintStart_toStartOf="parent" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_hour_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addActivity_hour_input"
                    android:ems="10"
                    android:inputType="time" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_room"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/form_hour"
                app:layout_constraintStart_toStartOf="parent" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_room_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addActivity_room_input"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_members"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/form_room"
                app:layout_constraintStart_toStartOf="parent" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_members_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addActivity_members_input"
                    android:inputType="textMultiLine"
                    android:minLines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:enabled="false"
                android:text="@string/addActivity_save_button"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_members" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>